Changed the calorie position to absolute to fix spacing issue from different title lenghts.

--- a/noomies-foodies-client/src/components/Planner/MealCardSmall/MealCardSmall.css
+++ b/noomies-foodies-client/src/components/Planner/MealCardSmall/MealCardSmall.css
@@ -36,6 +36,9 @@ body {
     margin-top: .75rem;
     display: flex;
     justify-content: center;
+    position: absolute;
+    bottom: 1.06rem;
+    left: 5.06rem;
     /* font-size: 1rem; */
 }
 .calorie-wrapper * {
